updated profile page
I added all my previous code to it

--- a/mynewproject.html
+++ b/mynewproject.html
@@ -1,2 +1,109 @@
-<h1> My new project</h1>
-<h2> My fave color is red.</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
+	<style type="text/css">
+		body{
+			top: 0px;
+		}
+		h1{
+			font-family: 'Montserrat', sans-serif;
+			font-size: 100px;
+		}
+		header{
+			background-color: #7ed957;
+			color: black;
+			padding: 200px 400px 100px 400px;
+			height: 70vh;
+			top: 0px;
+		}
+
+.content{
+	background-color: yellow;
+	color: black;
+	font-size: 50px;
+	font-family: 'Montserrat', sans-serif;
+	padding: 200px 400px 100px 400px;
+
+}
+.hotlink{
+	text-decoration: none;
+}
+
+.first-photo{
+	display: block;
+	width: 150px;
+	height: 150px;
+	position: relative;
+	transform: translate(500px,20px);
+}
+
+footer{
+	font-family: 'Montserrat',sans-serif;
+	font-size: 25px;
+	background-color: pink;
+	color: black;
+	padding: 150px;
+	position: relative;
+	list-style: none;
+
+
+}
+.footer-img{
+	width: 100px;
+	height: 100px;
+	position: fixed;
+}
+.footer-image{
+	width: 30%;
+	height: 30%;
+	position: relative;
+	transform: translate(-150px,150px);
+
+
+}
+
+.last-footer-image{
+	width: 180px;
+	height: 80px;
+	position: relative;
+	transform: translateX(870px);
+transform: translateY(150px);
+}
+	</style>
+	<title> Oyinkan Balogun</title>
+</head>
+
+
+<body>
+	
+<header> 
+	<h1> Oyinkansola Balogun</h1>
+</header>
+
+
+<div class="content">
+	<p>
+	This will be where all the content will be here 
+	You can read my profile on
+	 <a href="mdcnprep.com" class="hotlink">my website here</a>
+	 <img src="img/img2.jpg" class="first-photo">
+	</p>
+</div>
+
+<footer> And of course you can reach me on all my social media platforms
+@OyinkanBalogun on <br>
+<ul>
+	<li> Facebook</li>
+	<li> Instagram</li>
+	<li> Twitter</li>
+	<li> LinkedIn</li>
+</ul>
+<img src="img/img1.jpg" class="footer-image">
+<img src="img/img1.jpg" class="footer-image">
+<img src="img/img1.jpg" class="footer-image">
+<img src="img/img1.jpg" class="last-footer-image">
+<img src="img/img1.jpg" class="footer-img">
+</footer>
+</body>
+</html>
